Bug 1627213 - Don't call HoldJSObjects in a superclass ctor. r=jonco

Differential Revision: https://phabricator.services.mozilla.com/D69586