dom/webauthn/AuthenticatorResponse.cpp
@@ -35,11 +35,11 @@ NS_INTERFACE_MAP_END
 
 AuthenticatorResponse::AuthenticatorResponse(nsPIDOMWindowInner* aParent)
     : mParent(aParent), mClientDataJSONCachedObj(nullptr) {
-  mozilla::HoldJSObjects(this);
+  // Call HoldJSObjects() in subclasses.
 }
 
 AuthenticatorResponse::~AuthenticatorResponse() {
-  mozilla::DropJSObjects(this);
+  // Call DropJSObjects() in subclasses.
 }
 
 void AuthenticatorResponse::GetClientDataJSON(
